--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+
+    <servlet>
+        <servlet-name>resultat</servlet-name>
+        <jsp-file>/WEB-INF/tpchifoumi/resultat.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>resultat</servlet-name>
+        <url-pattern>/WEB-INF/tpchifoumi/resultat.jsp</url-pattern>
+    </servlet-mapping>
 </web-app>
+
+
